# easy-deploy-demo

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh
demo/: settings.py
